# fylepad

./: .env.example  .gitignore  .oxfmtrc.json  LICENCE  LICENSE  README.md  app.vue  components.json  drizzle.config.ts  eslint.config.mjs  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pwa-assets.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json  typed-router.d.ts  ui.config.ts  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: main.yml  mirror.yml
app/: app.vue
app/components/: editor.vue  tabLinkMenu.vue
app/composables/: useTabLinkSuggestion.ts
app/extensions/: ColorHighlighter.ts  ImageResize.ts  findColors.ts  hyperlink.ts  search&replace.ts
app/layouts/: default.vue
app/lib/: utils.ts
app/pages/: about.vue  index.vue
app/plugins/: pinia.client.ts
app/stores/: focus.ts
app/types/: tab.ts  tabLinkMenu.ts
app/utils/: editor.ts  exportPDF.ts  functions.ts
assets/css/: main.css
components/: editor.vue  tabLinkMenu.vue
components/app/: header.vue
components/icons/: AboutIcon.vue  ArrowLeftIcon.vue  ArrowRightIcon.vue  CaseSensitiveIcon.vue  DarkModeIcon.vue  DeleteIcon.vue  ExportIcon.vue  FocusModeIcon.vue  HeaderCellIcon.vue  (+14 more)
composables/: useTabLinkSuggestion.ts
content/: demo.json
extensions/: ColorHighlighter.ts  SmilieReplacer.ts  TabLinkSuggestion.ts  findColors.ts  hyperlink.ts  search&replace.ts
layouts/: default.vue
lib/: db.ts  notes.ts  schema.ts  utils.ts
middleware/: auth.global.ts
migrations/: 0000_same_bill_hollister.sql  0001_burly_xorn.sql  0002_pale_excalibur.sql
pages/: about.vue  app.vue  index.vue  signin.vue  signup.vue
public/: site.webmanifest  sitemap.xml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
stores/: focus.ts
tests/: editor-file-operations.test.ts  tsconfig.json
types/: tab.ts
utils/: editor.ts  exportPDF.ts  functions.ts  icon.ts
(+190 files in other folders)
